@@ -2,7 +2,7 @@ from __future__ import division
 
 import operator
 from types import MethodType
-from six.moves import UserList
+from collections import UserList
 
 
 import numpy as np
