@@ -142,7 +142,7 @@ info = {
         'include_package_data': True,
         'setup_requires': ['numpy'],
         'python_requires': '>=3.5',
-        'install_requires': ['numpy', 'scipy', 'six', 'pandas'],
+        'install_requires': ['numpy', 'scipy', 'pandas'],
         'extras_require': {'all': ['IPython', 'ipywidgets', 'traitlets',
                                    'matplotlib', 'xlrd', 'h5py', 'tqdm',
                                    'pymc3', 'theano', 'ptemcee']},
