@@ -4,3 +4,9 @@ Details of changes made to refnx
 0.1.1
 -----
 - removal of Python 2.7 support
+- added azure pipelines for faster windows CI
+- remove `uncertainties` as a package dependency (it's still used for testing)
+- remove `six` as a package dependency
+- add `refnx.util.refplot` for quick plotting of reflectometry datasets
+- fixed various deprecation warnings
+- added the ability to mask (hide) points in a `refnx.dataset.Data1D` dataset
